add feature/mar-336, changeUserPassword from personal cabinet (#62)
